--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_book.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_book.axml
@@ -11,14 +11,14 @@
         android:src="@drawable/ic_add"
         android:tint="@android:color/white"
         android:layout_margin="8dp"
-        local:MvxBind="Click AddAuthorCommand"
+        local:MvxBind="Click AddBookCommand"
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintEnd_toEndOf="parent" />
     <mvvmcross.droid.support.v7.recyclerview.MvxRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        local:MvxItemTemplate="@layout/item_author"
-        local:MvxBind="ItemsSource Authors;ItemClick ItemClickCommand;" />
+        local:MvxItemTemplate="@layout/item_book"
+        local:MvxBind="ItemsSource Books;ItemClick ItemClickCommand;" />
 
 </android.support.constraint.ConstraintLayout>
