--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_authordetail.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_authordetail.axml
@@ -72,4 +72,18 @@
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintEnd_toEndOf="parent"
         local:MvxBind="Click EditAuthorCommand;Visibility Visibility(IsEditing)"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        local:MvxBind="Visible IsLoading">
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminateOnly="true"
+            android:indeterminate="true" />
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
