--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_addauthor.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_addauthor.axml
@@ -31,4 +31,19 @@
         local:layout_constraintStart_toStartOf="parent"
         local:layout_constraintTop_toBottomOf="@+id/txtName"
         local:MvxBind="Text LblBtn;Click AddAuthorCommand;Enabled IsValid;"/>
+
+     <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        local:MvxBind="Visible IsLoading">
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminateOnly="true"
+            android:indeterminate="true" />
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
