--- a/ThePage/src/ThePage.Droid/Resources/layout/author_spinner_template.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/author_spinner_template.axml
@@ -1,10 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<TextView  xmlns:android="http://schemas.android.com/apk/res/android"
+﻿   <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/lblName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        local:layout_constraintTop_toTopOf="parent"
-        local:layout_constraintBottom_toBottomOf="parent"
-        local:MvxBind="Text Name"/>
+        android:layout_gravity="center"
+        android:padding="10dp"
+        local:MvxBind="Text Name" />
