--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_debug_item.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_debug_item.axml
@@ -7,6 +7,6 @@
     android:layout_margin="@dimen/margin_small"
     android:padding="@dimen/padding_small"
     android:textSize="@dimen/textTitle"
-    android:textColor="@color/secondaryTextColor"
+    android:textColor="@color/white"
     android:background="@color/accentLightColor"
     local:MvxBind="Text Label;" />
