--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_addbook.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_addbook.axml
@@ -4,6 +4,8 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true" 
+    android:focusableInTouchMode="true"
     android:padding="8dp">
 
     <TextView
