--- a/ThePage/src/ThePage.Droid/Resources/layout/author_spinner_template.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/author_spinner_template.axml
@@ -3,5 +3,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         local:MvxBind="Text Name" />
