--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_debug.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_debug.axml
@@ -4,7 +4,7 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <mvvmcross.droid.support.v7.recyclerview.MvxRecyclerView
+    <MvxRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         local:MvxTemplateSelector="ThePage.Droid.DebugTemplateSelector, ThePage.Droid"
