--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_selectgenre.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_selectgenre.axml
@@ -11,9 +11,9 @@
         android:src="@drawable/ic_add"
         android:tint="@android:color/white"
         android:layout_margin="8dp"
-        local:MvxBind="Click AddGenreCommand"
         local:layout_constraintBottom_toBottomOf="parent"
-        local:layout_constraintEnd_toEndOf="parent" />
+        local:layout_constraintEnd_toEndOf="parent"
+        local:MvxBind="Click AddGenreCommand"/>
     <MvxRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
