#52 update layout files to show correct property

--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_genre_item.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_genre_item.axml
@@ -15,7 +15,7 @@
         android:textSize="20dp"
         local:layout_constraintTop_toTopOf="parent"
         local:layout_constraintBottom_toBottomOf="parent"
-        local:MvxBind="Text Name"/>
+        local:MvxBind="Text Genre.Name"/>
 
     <ImageView
         android:layout_width="30dp"
