--- a/ThePage/src/ThePage.Droid/Resources/layout/fragment_selectgenre.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/fragment_selectgenre.axml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         local:MvxItemTemplate="@layout/cell_genre_item"
-        local:MvxBind="ItemsSource Genres;ItemClick GenreClickCommand;" />
+        local:MvxBind="ItemsSource CellGenres;ItemClick GenreClickCommand;" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
