--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_switch.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_switch.axml
@@ -15,18 +15,17 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         local:layout_constraintTop_toTopOf="parent"
-        local:layout_constraintBottom_toTopOf="@+id/txtTitle"
+        local:layout_constraintBottom_toTopOf="@+id/switchSelected"
         local:layout_constraintStart_toStartOf="parent"
         local:MvxBind="Text LblTitle"/>
 
-    <EditText
-        android:id="@+id/txtTitle"
-        android:layout_width="match_parent"
+    <Switch
+        android:id="@+id/switchSelected"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         local:layout_constraintTop_toBottomOf="@+id/lblTitle"
-        local:layout_constraintBottom_toTopOf="@+id/lblAuthor"
-        local:layout_constraintEnd_toEndOf="parent"
+        local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintStart_toStartOf="parent"
-        local:MvxBind="Text TxtTitle"/>
+        local:MvxBind="Checked IsSelected" />
 
 </android.support.constraint.ConstraintLayout>
