--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_title.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_title.axml
@@ -4,5 +4,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:textStyle="bold"
     android:clickable="true" 
-    local:MvxBind="Text Genre.Name;Click DeleteCommand;"/>
+    local:MvxBind="Text LblTitle"/>
