#57 add Core converter, extra login in BL, add view only for switch and author, hide add genre in view-only

--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_switch.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_switch.axml
@@ -24,8 +24,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         local:layout_constraintTop_toBottomOf="@+id/lblTitle"
+        local:layout_constraintBottom_toTopOf="@+id/lblValue"
+        local:layout_constraintStart_toStartOf="parent"
+        local:MvxBind="Checked IsSelected;Visibility Visibility(IsEdit)" />
+
+    <TextView
+        android:id="@+id/lblValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:layout_constraintTop_toBottomOf="@+id/switchSelected"
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintStart_toStartOf="parent"
-        local:MvxBind="Checked IsSelected" />
+        local:MvxBind="Text BoolToYesNoText(IsSelected);Visibility InvertedVisibility(IsEdit)"/>
 
 </android.support.constraint.ConstraintLayout>
