--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_author.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_author.axml
@@ -23,10 +23,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         local:layout_constraintTop_toBottomOf="@+id/lblAuthor"
-        local:layout_constraintBottom_toBottomOf="parent"
+        local:layout_constraintBottom_toTopOf="@+id/lblValue"
         local:layout_constraintStart_toStartOf="parent"
         local:MvxItemTemplate="@layout/author_spinner_template"
         local:MvxDropDownItemTemplate="@layout/author_spinner_template"
-        local:MvxBind="ItemsSource Authors; SelectedItem SelectedAuthor; HandleItemSelected ItemSelectedCommand"/>
+        local:MvxBind="ItemsSource Authors; SelectedItem SelectedAuthor; HandleItemSelected ItemSelectedCommand; Visibility Visibility(IsEdit)"/>
+
+    <TextView
+        android:id="@+id/lblValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:layout_constraintTop_toBottomOf="@+id/spnrAuthor"
+        local:layout_constraintBottom_toBottomOf="parent"
+        local:layout_constraintStart_toStartOf="parent"
+        local:MvxBind="Text SelectedAuthor.Name;Visibility InvertedVisibility(IsEdit)"/>
     
 </android.support.constraint.ConstraintLayout>
