#71 add possibility to close and open headers in debug view, remove all test data option

--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_debug_header.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_debug_header.axml
@@ -9,4 +9,4 @@
     android:textColor="@color/white"
     android:textStyle="bold"
     android:background="@color/accentColor"
-    local:MvxBind="Text Title;" />
+    local:MvxBind="Text Title;Click ItemClickCommand" />
