#71 create Base cell for headers, add chevron drawables, create DrawableRight binding, Option to delete all test data

--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_debug_header.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_debug_header.axml
@@ -9,4 +9,5 @@
     android:textColor="@color/white"
     android:textStyle="bold"
     android:background="@color/accentColor"
-    local:MvxBind="Text Title;Click ItemClickCommand" />
+    android:drawableTint="@color/white"
+    local:MvxBind="Text Title;DrawableRight If(IsOpen, OpenIcon, CloseIcon)" />
