--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_genre_select_item.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_genre_select_item.axml
@@ -2,26 +2,32 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/border_blue"
-    android:layout_marginTop="3dp"
-    android:layout_marginBottom="3dp"
-    android:padding="5dp"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
     <TextView
         android:id="@+id/lblName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:textSize="20dp"
         local:layout_constraintTop_toTopOf="parent"
         local:layout_constraintBottom_toBottomOf="parent"
-        local:MvxBind="Text Name"/>
+        local:MvxBind="Text Item.Name"/>
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_arrow_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         local:layout_constraintTop_toTopOf="parent"
         local:layout_constraintBottom_toBottomOf="parent"
-        local:layout_constraintEnd_toEndOf="parent"    />
+        local:layout_constraintEnd_toEndOf="parent"
+        local:MvxBind="ResourceName If(IsSelected, IconSelected)"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/primaryColor"
+        local:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
