#65 add select author view, code cleanup, add delete button genre item, add delete drawable,

--- a/ThePage/src/ThePage.Droid/Resources/layout/cell_book_author.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/cell_book_author.axml
@@ -1,41 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true" 
-    android:focusableInTouchMode="true"
-    android:padding="4dp">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:local="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:clickable="true"
+	android:padding="4dp"
+    local:MvxBind="Click If(IsEdit,CommandSelectItem)">
 
-    <TextView
-        android:id="@+id/lblAuthor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        local:layout_constraintTop_toTopOf="parent"
-        local:layout_constraintBottom_toTopOf="@+id/spnrAuthor"
-        local:layout_constraintStart_toStartOf="parent"
-        local:MvxBind="Text LblAuthor"/>
+	<TextView
+		android:id="@+id/lblAuthor"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:textStyle="bold"
+		local:layout_constraintTop_toTopOf="parent"
+		local:layout_constraintBottom_toTopOf="@+id/txtInput"
+		local:layout_constraintStart_toStartOf="parent"
+		local:MvxBind="Text LblAuthor"/>
 
-    <mvvmcross.platforms.android.binding.views.MvxSpinner
-        android:id="@+id/spnrAuthor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        local:layout_constraintTop_toBottomOf="@+id/lblAuthor"
-        local:layout_constraintBottom_toTopOf="@+id/lblValue"
-        local:layout_constraintStart_toStartOf="parent"
-        local:MvxItemTemplate="@layout/author_spinner_template"
-        local:MvxDropDownItemTemplate="@layout/author_spinner_template"
-        local:MvxBind="ItemsSource Authors; SelectedItem SelectedAuthor; HandleItemSelected ItemSelectedCommand; Visibility Visibility(IsEdit)"/>
+	<TextView
+		android:id="@+id/txtInput"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+        android:drawableRight="@drawable/ic_account_edit"
+		local:layout_constraintTop_toBottomOf="@+id/lblAuthor"
+		local:layout_constraintBottom_toTopOf="@+id/lblValue"
+		local:layout_constraintStart_toStartOf="parent"
+		local:layout_constraintWidth_percent="0.5"
+		local:MvxBind="Text Item.Name;Visibility Visibility(IsEdit)"/>
 
-    <TextView
-        android:id="@+id/lblValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        local:layout_constraintTop_toBottomOf="@+id/spnrAuthor"
-        local:layout_constraintBottom_toBottomOf="parent"
-        local:layout_constraintStart_toStartOf="parent"
-        local:MvxBind="Text SelectedAuthor.Name;Visibility InvertedVisibility(IsEdit)"/>
-    
+	<TextView
+		android:id="@+id/lblValue"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		local:layout_constraintTop_toBottomOf="@+id/txtInput"
+		local:layout_constraintBottom_toBottomOf="parent"
+		local:layout_constraintStart_toStartOf="parent"
+		local:MvxBind="Text Item.Name;Visibility InvertedVisibility(IsEdit)"/>
+
 </android.support.constraint.ConstraintLayout>
