#98 expand HttpLogger to format json data,  expand Request to exclude null objects, only send modified data to api, code cleanup

--- a/ThePage/src/ThePage.Droid/Resources/layout/item_author.axml
+++ b/ThePage/src/ThePage.Droid/Resources/layout/item_author.axml
@@ -15,7 +15,7 @@
         android:textSize="20dp"
         local:layout_constraintTop_toTopOf="parent"
         local:layout_constraintBottom_toBottomOf="parent"
-        local:MvxBind="Text Author.Name"/>
+        local:MvxBind="Text Name"/>
 
     <ImageView
         android:layout_width="30dp"
